# pcl-ce-extension

./: .gitignore  Cargo.toml  LICENSE
examples/csharp/: DaemonExample.csproj  DaemonRpcClient.cs  Program.cs
src/: error.rs  main.rs  state.rs
src/auth/: hmac.rs
src/daemon/: core.rs
src/ipc/: protocol.rs  server.rs
src/rpc/: dispatcher.rs  methods.rs  mod.rs  types.rs
src/smtc/: manager.rs
src/toast/: manager.rs
src/update/: manager.rs
